--- a/public/members.html
+++ b/public/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Our Same Kitchen</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -33,7 +33,7 @@
           <label for="inputMealCount" class="sr-only"></label>
           <input type="mealCount" class="form-control" id="inputMealCount" placeholder="Meal count">
         </div>
-        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+        <button type="submit" class="btn btn-primary mb-2" id="submit-btn">Submit</button>
       </form>
     </div>
     <div class="row">
