--- a/public/signup.html
+++ b/public/signup.html
@@ -5,55 +5,93 @@
   <title>Our Same Kitchen</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+  <!-- Link to Bootstrap stylesheet -->
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- Link to stylesheet -->
   <link href="stylesheets/style.css" rel="stylesheet">
+  <!-- Link to Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@300&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
+  <header>
+    <div id="company-name">OUR SAME KITCHEN</div>
+    <ul id="navigation">
+      <li class="nav-item"><a href="#mission">MISSION</a></li>
+      <li class="nav-item"><a href="#join">JOIN</a></li>
+      <li class="nav-item"><a href="/login">LOGIN</a></li>
+    </ul>
+  </header>
+  <main>
+    <div id="intro">
+      <img src="img/landing.jpg" alt="donation image" />
+      <div id="greeting">
+        <h1 id="attn">1/3 of the food produced in the world is wasted</h1>
+        <p id="adjective">That's enough to feed double the number undernourished people across the globe.</p>
       </div>
     </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Sign Up Form</h2>
-        <form class="signup">
-          <div class="form-group">
-            <label for="exampleInputName">Name</label>
-            <input type="name" class="form-control" id="name-input" placeholder="Name">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputAddress">Address</label>
-            <input type="address" class="form-control" id="address-input" placeholder="Address">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPhone">Phone number</label>
-            <input type="phone" class="form-control" id="phone-input" placeholder="Phone number">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span> <span class="msg"></span>
-          </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
-        </form>
-        <br />
-        <p>Or log in <a href="/login">here</a></p>
+    <div id="mission">
+      <div class="section-header">MISSION</div>
+      <div class="container">
+        <p>Our Same Kitchen was founded on the belief that hunger is not a food issue. It is a logistics issue. The
+          United States wastes 40% of all food produced each year. That is $161 billion in uneaten food at retailers and
+          restaurants and lost opportunities to feed the 50 million Americans who are food insecure. Diverting only 15%
+          of wasted
+          food would be enough to cut that number in half. That's where we come in.</p>
+        <p>Our Same Kitchen is a non-profit food delivery service for food establishments such as restaurants, grocery
+          stores and farms. With the help of our volunteers, surplus food from food establishments are picked up and
+          delivered to food banks, families and individuals in need.</p>
       </div>
     </div>
-  </div>
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <div class="container" id="join">
+      <div class="section-header">ARE YOU A FOOD ESTABLISHMENT LOOKING TO DONATE?</div>
+      <div class="section-header">JOIN OUR CAUSE</div>
+      <form class="signup">
+        <div class="form-group">
+          <label for="exampleInputName">Name</label>
+          <input type="name" class="form-control" id="name-input" placeholder="Name">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputAddress">Address</label>
+          <input type="address" class="form-control" id="address-input" placeholder="Address">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPhone">Phone number</label>
+          <input type="phone" class="form-control" id="phone-input" placeholder="Phone number">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="email-input" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="password-input" placeholder="Password">
+        </div>
+        <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
+        <button type="submit" class="btn btn-default">Sign Up</button>
+      </form>
+      <br />
+      <p>Or log in <a href="/login">here</a></p>
+    </div>
+  </main>
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/signup.js"></script>
 
 </body>
