--- a/public/signup.html
+++ b/public/signup.html
@@ -14,12 +14,11 @@
   <!-- Link to Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@300&display=swap"
     rel="stylesheet">
-
 </head>
 
 <body>
   <header>
-    <div id="company-name">OUR SAME KITCHEN</div>
+    <div class="bold-name">OUR SAME KITCHEN</div>
     <ul id="navigation">
       <li class="nav-item"><a href="#mission">MISSION</a></li>
       <li class="nav-item"><a href="#join">JOIN</a></li>
@@ -49,7 +48,7 @@
     </div>
     <div class="container" id="join">
       <div class="section-header">ARE YOU A FOOD ESTABLISHMENT LOOKING TO DONATE?</div>
-      <div class="section-header">JOIN OUR CAUSE</div>
+      <div class="bold-name">JOIN OUR CAUSE</div>
       <form class="signup">
         <div class="form-group">
           <label for="exampleInputName">Name</label>
@@ -75,7 +74,7 @@
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
         </div>
-        <button type="submit" class="btn btn-default">Sign Up</button>
+        <button type="submit" class="btn btn-default btns">Sign Up</button>
       </form>
       <br />
       <p>Or log in <a href="/login">here</a></p>
