--- a/public/signup.html
+++ b/public/signup.html
@@ -60,7 +60,7 @@
         </div>
         <div class="form-group">
           <label for="exampleInputPhone">Phone number</label>
-          <input type="phone" class="form-control" id="phone-input" placeholder="Phone number">
+          <input type="text" class="form-control input-phone" id="phone-input" placeholder="Phone number">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -90,6 +90,7 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/signup.js"></script>
+
 
 </body>
 
