Corrected greeting statement

--- a/public/signup.html
+++ b/public/signup.html
@@ -30,7 +30,7 @@
       <img src="img/landing.jpg" alt="donation image" />
       <div id="greeting">
         <h1 id="attn">1/3 of the food produced in the world is wasted</h1>
-        <p id="adjective">That's enough to feed double the number undernourished people across the globe.</p>
+        <p id="adjective">That's enough to feed double the number of undernourished people across the globe.</p>
       </div>
     </div>
     <div id="mission">
